change language complete

--- a/FrontEnd/src/components/locales/en/books.json
+++ b/FrontEnd/src/components/locales/en/books.json
@@ -1,3 +1,30 @@
 {
-  "search": "Search book..."
+  "search": "Search book...",
+  "home": "Home",
+  "customerReviews": "Customer reviews",
+  "AddToCart": "Add To Cart",
+  "BuyNow": "Buy Now",
+  "RealeaseDate": "Release date",
+  "Publisher": "Publisher",
+  "Author": "Author",
+  "Addtowishlist": "Add to wishlist",
+  "Description": "Description",
+  "Information": "Information about the story",
+  "Specification": "Specification",
+  "Overview": "Overview",
+  "Languages": "Languages",
+  "Language": "Language",
+  "DiscountedStory": "Discounted Story",
+  "CustomerReviews": "CustomerReviews",
+  "Reviews": "Reviews",
+  "AddAReview": "ADD A REVIEW",
+  "wish": "Wishing you the best experiences when buying books on our site❤️",
+  "Yourrating": "Your rating",
+  "YourReview": "Your review",
+  "Submit": "Submit",
+  "Reviewsfor": "Reviews for",
+  "Maybeyouwilllike": "Maybe you will like",
+  "newProductsAdded": "New Products Added",
+  "viewcart": "View Cart",
+  "Cart": "Add Items To Cart"
 }
