--- a/FrontEnd/src/components/locales/vi/books.json
+++ b/FrontEnd/src/components/locales/vi/books.json
@@ -1,3 +1,30 @@
 {
-  "search": "Tìm kiếm sách..."
+  "search": "Tìm kiếm sách...",
+  "home": "Trang chủ",
+  "customerReviews": "Đánh giá",
+  "AddToCart": "Thêm vào giỏ",
+  "BuyNow": "Mua Ngay",
+  "RealeaseDate": "Ngày phát hành",
+  "Publisher": "Nhà xuất bản",
+  "Author": "Tác giả",
+  "Addtowishlist": "Thêm vào yêu thích",
+  "Description": "Mô tả",
+  "Information": "Thông tin của cuốn sách",
+  "Specification": "Cụ thể",
+  "Overview": "Tổng Quan",
+  "Languages": "Ngôn ngữ",
+  "Language": "Ngôn ngữ",
+  "DiscountedStory": "Sách được giảm giá",
+  "CustomerReviews": "Đánh giá của khách hàng",
+  "Reviews": "Đánh giá",
+  "AddAReview": "THÊM ĐÁNH GIÁ",
+  "wish": "Chúc bạn có những trải nghiệm tốt đẹp nhất khi mua sách ở trang của chúng tôi❤️",
+  "Yourrating": "Xếp hạng của bạn",
+  "YourReview": "Đánh giá của bạn",
+  "Submit": "Gửi",
+  "Reviewsfor": "Đánh giá cho",
+  "Maybeyouwilllike": "Có lẽ bạn sẽ thích",
+  "newProductsAdded": "Sản Phẩm Mới Thêm",
+  "viewcart": "Xem Giỏ Hàng",
+  "Cart": "Thêm Hàng Vào Giỏ"
 }
