fix name session

--- a/FrontEnd/src/components/locales/en/checkout.json
+++ b/FrontEnd/src/components/locales/en/checkout.json
@@ -6,6 +6,8 @@
   "Count": "Count",
   "Price": "Price",
   "FillInformation": "Fill in information",
+  "Entername": "Enter your name",
+  "EN": "Name",
   "Enterphone": "Enter phone number",
   "EP": "Phone Number",
   "EnterAddress": "Enter Address",
