--- a/FrontEnd/src/components/locales/vi/checkout.json
+++ b/FrontEnd/src/components/locales/vi/checkout.json
@@ -6,6 +6,8 @@
   "Count": "Số Lượng",
   "Price": "Giá",
   "FillInformation": "Điền thông tin",
+  "Entername": "Nhập tên",
+  "EN": "Tên",
   "Enterphone": "Nhập số điện thoại",
   "EP": "Số điện thoại",
   "EnterAddress": "Nhập địa chỉ",
